--- a/wofi/style.css
+++ b/wofi/style.css
@@ -17,26 +17,26 @@
 
 window {
         margin: 0px;
-        background-color: @dark1;
+        background-color: rgba(0, 0, 0, 0.5);
 }
 
 #input {
         margin: 5px;
         border: none;
         color: @blue1;
-        background-color: @dark2;
+        background-color: rgba(0, 0, 0, 0.2);
 }
 
 #inner-box {
         margin: 5px;
         border: none;
-        background-color: @dark1;
+        background-color: transparent;
 }
 
 #outer-box {
         margin: 5px;
         border: none;
-        background-color: @dark1;
+        background-color: transparent;
 }
 
 #scroll {
@@ -51,5 +51,5 @@ window {
 }
 
 #entry:selected {
-        background-color: @dark2;
+        background-color: rgba(0, 0, 0, 0.2);
 }
